Modified CSS of reg-btn-color & header, minor text change to profile card & dropdown, mobile responsiveness/layout issues with edit profile have been fixed

--- a/static/src/styles.scss
+++ b/static/src/styles.scss
@@ -103,12 +103,12 @@ h1{
     margin-left: auto;
     color: #fff;
     background-color: #e74c3c;
+    width: 100px;
     cursor: pointer;
     border-radius: 100px;
     padding-right: 10px;
     padding-left: 10px;
     text-decoration: none;
-    display: inline;
 }
 .reg-btn-color:hover{
     border:2px solid #c0392b;
